# skivvy-rquotes

./: .gitignore  README.md  configure.ac
docs/: rquotes-manual.text
src/: Makefile.am  plugin-rquotes.cpp
src/include/skivvy/: plugin-rquotes.h
